v1.0.8 Fix checkbox visibility

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -277,6 +277,7 @@ input.collapsible
 	height: 0;
 	margin: 0;
 	padding: 0;
+	visibility: hidden;
 }
 
 .collapsible-toggle
